--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Dao Hang</title>
   </head>
   <body>
-    <header class="clearfix">
+    <header class="header">
       <div class="logo">
         <img
           src="https://static.xiedaimala.com/xdml/cdn/assets/white-logo-1a762b425df663fbccee710fe08d66951cea2fbc0a0350f03446ab30462e739f.png"
           alt="logo"
         />
       </div>
-      <ul class="clearfix nav">
+      <ul>
         <li>首页</li>
         <li>课程</li>
         <li>优惠</li>
@@ -23,7 +23,7 @@
       </ul>
     </header>
 
-    <div class="content clearfix">
+    <div class="content">
       <aside>
         一行有六个字
       </aside>
@@ -32,15 +32,16 @@
       <div class="ad"></div>
     </div>
 
+
     <div class="imagesList">
-      <div class="x clearfix">
-      <div class="image"></div>
-      <div class="image"></div>
-      <div class="image"></div>
-      <div class="image"></div>
-      <div class="image"></div>
-      <div class="image"></div>
-      <div class="image"></div>
+      <div class="x">
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
       </div>
     </div>
   </body>
